<resources>
    <string name="app_name">MicroFormas_BrianViana</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyA6wXno--OY9mdnJeOJNpkD88LaQY325Mg</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="nombre">Nombre(s)</string>
    <string name="apellido">Apellidos</string>
    <string name="correo">Correo</string>
    <string name="contraseña">Contraseña</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="contrasena">Contraseña</string>
    <string name="cuenta_creada">¿Ya tienes una cuenta?</string>
    <string name="olvide_contrasena">Olvide mi contraseña</string>
    <string name="clients">Clients</string>

    <!--    Dialogs-->
    <string name="Error">Error</string>
    <string name="ErrorDialog">Ocurrio un Problema</string>
    <string name="Exito">Éxito</string>
    <string name="Aceptar">Aceptar</string>
    <string name="crear">Crear</string>
    <string name="editar">Editar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="maps">Location</string>
    <string name="buscar">Buscar</string>
    <string name="telefono">Teléfono</string>
    <string name="direcci_n">Dirección:</string>
    <string name="tel_fono">Teléfono:</string>
    <string name="estatus">Estatus:</string>
    <string name="fecha_de_cierre">Fecha de cierre:</string>
    <string name="fecha_de_alta">Fecha de alta:</string>
    <string name="descripci_n_corta">Descripción Corta:</string>
    <string name="servicio">Servicio:</string>
    <string name="cliente">Cliente:</string>
    <string name="no_de_afiliaci_n">No. de Afiliación:</string>
    <string name="negocio">Negocio</string>
    <string name="microapp">MicroApp</string>
    <string name="username">Username</string>

</resources>