<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <!-- No. de Afiliación -->
    <LinearLayout
        android:id="@+id/linearNoAfiliacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/no_de_afiliaci_n"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvNoAfiliacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            tools:text="5611637" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/grayDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearNoAfiliacion" />

    <!-- Cliente -->
    <LinearLayout
        android:id="@+id/linearCliente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearNoAfiliacion">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/cliente"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvCliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            tools:text="TPV-1 TPV GETNET SANTANDER SERVICIOS" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/grayDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearCliente" />

    <!-- Servicio -->
    <LinearLayout
        android:id="@+id/linearServicio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearCliente">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/servicio"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvServicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            tools:text="CAMBIO DE SIM A MOVISTAR" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/grayDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearServicio" />

    <!-- Descripción Corta -->
    <LinearLayout
        android:id="@+id/linearDescripcionCorta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearServicio">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/descripci_n_corta"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvDescripcionCorta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            tools:text="CAMBIO DE SIM DE TELCEL A MOVISTAR" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/grayDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearDescripcionCorta" />

    <!-- Fecha de alta -->
    <LinearLayout
        android:id="@+id/linearFechaAlta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearDescripcionCorta">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/fecha_de_alta"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvFechaAlta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="16sp"
            tools:text="30/10/2023 09:52:00" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/grayDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearFechaAlta" />

    <!-- Fecha de cierre -->
    <LinearLayout
        android:id="@+id/linearFechaCierre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearFechaAlta">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/fecha_de_cierre"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvFechaCierre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_red_light"
            android:textSize="16sp"
            tools:text="22/05/2024 18:01:00" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/grayDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearFechaCierre" />

    <!-- Dirección -->
    <LinearLayout
        android:id="@+id/linearDireccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearFechaCierre">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/direcci_n"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvDireccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                tools:text="AV CONVENCION 1914 NTE NO 808" />

            <TextView
                android:id="@+id/tvColonia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                tools:text="CIRCUNVALACION NORTE" />

            <TextView
                android:id="@+id/tvPoblacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                tools:text="AGUASCALIENTES AGS" />

            <TextView
                android:id="@+id/tvEstado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                tools:text="AGUASCALIENTES" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/grayDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearDireccion" />

    <!-- Teléfono -->
    <LinearLayout
        android:id="@+id/linearTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearDireccion">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/tel_fono"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="16sp"
            tools:text="4499298425" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/grayDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearTelefono" />

    <!-- Estatus del Servicio -->
    <LinearLayout
        android:id="@+id/linearEstatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearTelefono">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/negocio"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvNegocio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:textSize="16sp"
            tools:text="TOYAMA MOTOS" />
    </LinearLayout>

    <View
        android:id="@+id/view_parent"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/grayDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearEstatus" />

    <View
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:background="@color/grayDark"
        app:layout_constraintBottom_toTopOf="@id/view_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:background="@color/grayDark"
        app:layout_constraintBottom_toTopOf="@id/view_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
